--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Cole's Cookies</div></a>
         <a class="nav-link" href="menu.html">Menu</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="order.html">Order</a>
       </li>
     </ul>
   </div>
@@ -94,7 +94,7 @@ Cole's Cookies</div></a>
     <!-- What we do section -->
         <div class="row no-gutters justify-content-center" style="padding:5vh 0vh 0vh 0vh; background:#FFFAB8;">
           <a href="menu.html"><button type="button" class="btn btn-primary mybutton">Menu</button></a>
-          <a href=""><button type="button" class="btn btn-primary mybutton">Order</button></a>
+          <a href="order.html"><button type="button" class="btn btn-primary mybutton">Order</button></a>
         </div>
     <div class="row no-gutters justify-content-center" style="padding:30px 0px; background:#FFFAB8;">
 <script src="script.js"></script>
