--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 
     <title>Cole's Cookies</title>
 	  <style>
+      html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
       h2 {font-family:'EB Garamond', serif;
 			color: #412F21;
       font-size: 35px;
@@ -72,7 +80,7 @@ Cole's Cookies</div></a>
         <a class="nav-link" href="about.html">About</a>
       </li>
 	<li class="nav-item">
-        <a class="nav-link" href="menu.html">Menu</a>
+        <a class="nav-link" href="gallery.html">Gallery</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="order.html">Order</a>
@@ -87,41 +95,19 @@ Cole's Cookies</div></a>
       <div class="row justify-content-center">
         
 
-<div class="row no-gutters justify-content-center" style="margin: 0px"><img src="https://scontent-mia3-2.xx.fbcdn.net/v/t1.15752-9/139614121_2123587817781824_4708177727102897328_n.jpg?_nc_cat=105&ccb=2&_nc_sid=ae9488&_nc_ohc=y1YVelxhBeIAX9WRY7F&_nc_ht=scontent-mia3-2.xx&oh=f21a878a77f7225e310af6738c470ee1&oe=602858AB" class="img-fluid" alt="Coles Cookies Logo" style="height: 40vh; margin: 10vh; border-radius: 20%">
+<div class="row no-gutters justify-content-center" style="margin: 0px"><img src="https://scontent-mia3-2.xx.fbcdn.net/v/t1.15752-9/139656035_886794225474990_3196658712444052135_n.jpg?_nc_cat=110&ccb=2&_nc_sid=ae9488&_nc_ohc=1mm0B4E8dVsAX_nGL-G&_nc_ht=scontent-mia3-2.xx&oh=c1e6ed3521f2a83ea87e74613c719720&oe=602C461F" class="img-fluid" alt="Coles Cookies Logo" style="height: 40vh; margin: 10vh; border-radius: 20%">
       </div>
     </div>
 </div>
     <!-- What we do section -->
         <div class="row no-gutters justify-content-center" style="padding:5vh 0vh 0vh 0vh; background:#FFFAB8;">
-          <a href="menu.html"><button type="button" class="btn btn-primary mybutton">Menu</button></a>
+          <a href="gallery.html"><button type="button" class="btn btn-primary mybutton">Gallery</button></a>
           <a href="order.html"><button type="button" class="btn btn-primary mybutton">Order</button></a>
         </div>
     <div class="row no-gutters justify-content-center" style="padding:30px 0px; background:#FFFAB8;">
-<script src="script.js"></script>
 <div class="col">
-<script>
-    (function($){
-        $(window).on('load', function(){
-            $.instagramFeed({
-                'username': 'colescookieschs',
-                'container': "#instagram-feed1",
-                'display_profile': false,
-                'display_biography': false,
-                'display_gallery': true,
-                'display_captions': true,
-                'callback': null,
-                'styling': true,
-                'items': 9,
-                'items_per_row': 3,
-                'margin': 2,
-                'lazy_load': true,
-                'on_error': console.error
-            });
-        });
-    })(jQuery);
-</script>
-<div class="row justify-content-center"><a href="https://www.instagram.com/colescookieschs/"><h2>@colescookieschs</h2></a></div>
-<div style="padding: 0vw 10vw" id="instagram-feed1"></div>
+<div class="row no-gutters justify-content-center" style="margin: 0px;"><img src="https://scontent-mia3-2.xx.fbcdn.net/v/t1.15752-9/139718552_202326381618948_4156615549994703960_n.jpg?_nc_cat=103&ccb=2&_nc_sid=ae9488&_nc_ohc=xB4gSj0UeIIAX_Nrjiy&_nc_ht=scontent-mia3-2.xx&oh=860e8e52c32e508f1731737bf8893d54&oe=602C27A9" class="img-fluid" alt="Coles Cookies Menu" style="height: 90vh; margin: 1vh 10vh;">
+      </div>
   </div>
 </div>
  
@@ -135,16 +121,13 @@ Cole's Cookies</div></a>
       <!--ADD SOCIAL MEDIA BUTTONS-->
       <div class="col" style="margin:10px 0px">
         
-	<a target="_blank" href="#">
+<a target="_blank" href="http://m.me/nicole.sullivan.50159">
 	<img title="Facebook" alt="Facebook" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="35" height="35">
 	</a>
-	<a target="_blank" href="https://twitter.com/intent/tweet?url=https%3A%2F%2Fcolescookies.daniellecox.repl.co%2F&text=Yum%21%20Check%20out%20these%20sweet%20treats%20from%20Cole%27s%20Cookies%20in%20Charleston%21">
-<img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="35" height="35" />
-</a>
-<a target="_blank" href="https://www.instagram.com/colescookieschs/">
+<a href="https://www.instagram.com/colescookieschs/">
 <img title="Instagram" alt="Instagram" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="35" height="35" />
 </a>
-  <a href="mailto:#">
+  <a href="mailto:colescookieschs@gmail.com">
 	<img title="email" alt="Email" src="http://icons.iconarchive.com/icons/graphicloads/100-flat-2/128/email-icon.png" width="35" height="35">
 	</a>
 	</div>
