--- a/about.html
+++ b/about.html
@@ -105,8 +105,9 @@ Cole's Cookies</div></a>
   <h2>About</h2></div>
   <div class="row d-flex justify-content-center">
   <div class="col-lg-4 col-md-5 col-sm-12" ><div style="font-family:'Open-Sans',sans-serif; background-color:white; padding: 10px; border-radius: 10px"><p>Nicole lives in Charleston and has a passion and talent for baking. With the help of her trusty sidekicks, she is looking to share her gifts and bring a little extra goodness to the world with her WAP (Wonderful-Ass Pastries).</p></div></div>
-   <div class="col-lg-4 col-md-5 col-sm-12"><img src="https://scontent-mia3-1.xx.fbcdn.net/v/t1.15752-9/p1080x2048/139301903_757213421860481_3034303091958224475_n.jpg?_nc_cat=108&ccb=2&_nc_sid=ae9488&_nc_ohc=Z146tb3IW4YAX8shaBe&_nc_ht=scontent-mia3-1.xx&tp=6&oh=612a68e8b5ceb18f1d8b65273f8db72f&oe=603298B0"  alt="Photo of two dogs" style="border-radius: 10px; height: 70vh"></div>
-</div></div></div>
+	  </div><div class="row d-flex justify-content-center">
+	   <div class="col-lg-4 col-md-5 col-sm-12"><img src="https://scontent-mia3-1.xx.fbcdn.net/v/t1.15752-9/p1080x2048/139301903_757213421860481_3034303091958224475_n.jpg?_nc_cat=108&ccb=2&_nc_sid=ae9488&_nc_ohc=Z146tb3IW4YAX8shaBe&_nc_ht=scontent-mia3-1.xx&tp=6&oh=612a68e8b5ceb18f1d8b65273f8db72f&oe=603298B0"  alt="Photo of two dogs" style="border-radius: 10px; height: 70vh"></div>
+	  </div></div></div>
 
 
 
